fixed white space at top/bottom of page

--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,8 @@
 
 :root {
 
+	overscroll-behavior: none;
+
 	--font-oxanium: 'Oxanium', sans-serif;
 	--font-ubuntu-mono: 'Ubuntu Mono', sans-serif;
 
